src/tests/snapshots/gitu__tests__rebase__rebase_elsewhere.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
▌other-branch                                                                   |
                                                                                |
 Recent commits                                                                 |
 46c81ca main other-branch add new-file                                         |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git rebase --autostash main                                                   |
Successfully rebased and updated refs/heads/other-branch.                       |
styles_hash: a57fd58ceebe5b88
