src/tests/snapshots/gitu__tests__rebase__rebase_elsewhere_prompt.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
 other-branch                                                                   |
                                                                                |
 Recent commits                                                                 |
 b66a0bf other-branch origin/main add initial-file                              |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 3/3   Rebase onto › █                                                          |
▌main                                                                           |
 origin/HEAD                                                                    |
 origin/main                                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: d7fb3a33fdddb3d1
