src/tests/snapshots/gitu__tests__rebase__rebase_interactive_asks_which_commit.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
▌132f122 main add third-file                                     Author Name __ |
 bc73029 add second-file                                         Author Name __ |
 f5149db add first-file                                          Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 6a0c94a14d797ed
