src/tests/snapshots/gitu__tests__rebase__rebase_interactive_from_the_picked_commit.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
▌pick   132f122 add third-file                                                  |
 pick   bc73029 add second-file                                                 |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: c0e53f1ab3287ec0
