src/tests/snapshots/gitu__tests__rebase__rebase_interactive_quit_runs_nothing.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
▌132f122 main add third-file                                                    |
 bc73029 add second-file                                                        |
 f5149db add first-file                                                         |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 33789d2cbce36b95
