src/tests/snapshots/gitu__tests__rebase__rebase_menu.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
▌On branch other-branch                                                         |
                                                                                |
 Recent commits                                                                 |
 b66a0bf other-branch origin/main add initial-file               Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Rebase                 Arguments                                               |
 a     abort            -a Autosquash (--autosquash)                            |
 c     continue         -A Autostash (--autostash)                              |
 e     onto elsewhere   -d Lie about committer date (--committer-date-is-author |
 i     interactively       -date)                                               |
 q/esc Quit/Close       -i Interactive (--interactive)                          |
                        -k Keep empty commits (--keep-empty)                    |
                        -h Disable hooks (--no-verify)                          |
                        -p Preserve merges (--preserve-merges)                  |
styles_hash: a0250296134efba5
