src/tests/snapshots/gitu__tests__rebase__rebase_subcommand_opens_the_todo.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
▌       132f122 add third-file                                                  |
        bc73029 add second-file                                                 |
        f5149db add first-file                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: d8349d25e03c0902
