src/tests/snapshots/gitu__tests__rebase__rebase_todo_drop_and_start.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
▌645b5e4 main add third-file                                     Author Name __ |
 f5149db add first-file                                          Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 91eb97c93ee94fee
