src/tests/snapshots/gitu__tests__rebase__rebase_todo_mark_squash.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
 pick   132f122 add third-file                                                  |
 squash bc73029 add second-file                                                 |
▌pick   f5149db add first-file                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 85070052c7a99104
