src/tests/snapshots/gitu__tests__rebase__rebase_todo_move_down.snap
---
source: src/tests/rebase.rs
expression: ctx.redact_buffer()
---
 pick   bc73029 add second-file                                                 |
▌pick   132f122 add third-file                                                  |
 pick   f5149db add first-file                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: fe1b3198e6e2f5d8
